# sbk-charts

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  install_rag_deps.py  pyproject.toml  requirements.txt  sbk-charts  setup.py  version.py
.devin/skills/add-ai-plugin/: SKILL.md
.devin/skills/add-chart/: SKILL.md
.devin/skills/build-verify/: SKILL.md
.devin/skills/fix-common-issues/: SKILL.md
.github/workflows/: python-app.yml
charts/: charts.py  multicharts.py  sbk_charts.py  sheets.py  version.py
docs/: AGENT_RECIPES.md  ARCHITECTURE.md  PLUGIN_SPECIFICATION.md
samples/charts/: sbk-file-read.csv  sbk-file-read.xlsx  sbk-file-rocksdb-read-huggingface.xlsx  sbk-file-rocksdb-read-lmstudio.xlsx  sbk-file-rocksdb-read-ollama.xlsx  sbk-file-rocksdb-read-pytorch-llm.xlsx  sbk-file-rocksdb-read.xlsx  sbk-rocksdb-read.csv  sbk-rocksdb-read.xlsx
src/ai/: discover.py  sbk_ai.py
src/charts/: charts.py  constants.py  multicharts.py  sbk_charts.py  sheets.py  utils.py  version.py
src/custom_ai/: README.md  hugging_face.py
src/custom_ai/anthropic/: README.md  anthropic.py
src/custom_ai/gemini/: README.md  __init__.py  gemini.py
src/custom_ai/hugging_face/: README.md  hugging_face.py
src/custom_ai/lm_studio/: README.md  lm_studio.py
src/custom_ai/no_ai/: no_ai.py
src/genai/: __init__.py  genai.py
src/main/: sbk_charts.py  sbk_version.py
src/parser/: sbk_parser.py
src/rag/: __init__.py  sbk_chroma_rag.py  sbk_rag.py  sbk_simple_rag.py
src/sheets/: logo.py  sheets.py
src/stat/: storage.py
src/version/: sbk_version.py
(+4 files in other folders)
