[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbk-charts"
version = "1.25.6.0"
authors = [
    { name = "KMG", email = "keshava.gowda@gmail.com" },
]
description = "SBK Charts"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "XlsxWriter~=3.2.3",
    "ordered-set~=4.1.0",
    "jproperties~=2.1.1",
    "pillow~=9.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.2",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/kmgowda/sbk-charts"
"Bug Tracker" = "https://github.com/kmgowda/sbk-charts/issues"

[tool.setuptools]
packages = ["charts"]

[tool.setuptools.entry-points]
console_scripts = [
    "sbk-charts = charts.sbk_charts:main",
]
